<resources>
    <string name="app_name">Pet Shop</string>
    <string name="escolha_cochorro">Escolha Qual Cochorro Deseja</string>
    <string name="border_collie">Border Collie R$ 800,00</string>
    <string name="pit_bull">Pit Bull R$ 750,00</string>
    <string name="pastor_alem">Pastor Alemão R$ 700,00</string>
    <string name="pastor_canadense">Pastor Canadense R$ 800,00</string>
    <string name="adestrado">Adestrado</string>
    <string name="todas_vacinas">Com todas vacinas em dia</string>
    <string name="femea">Fêmea</string>
</resources>
